--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "engines": {
-      "node": ">=14.0.0",
-      "yarn": ">=1.22.0",
-      "npm": "please-use-yarn"
-    }
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
@@ -23,13 +18,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.319.0",
-    "next": "14.1.0",
+    "next": "13.4.12",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "negotiator": "^0.6.3",
+    "@formatjs/intl-localematcher": "^0.4.0"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.1",
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@types/node": "^20",
